# clipia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_HARDENING.md  CODEX_TASKS.md  CODEX_TEST_PROMPT.md  CODEX_V2_QA_DEPLOY.md  Dockerfile  GEMINI.md  GEMINI_FRONTEND_REDESIGN.md  GEMINI_TASKS.md  QA_REPORT.md  README.md  deploy-frontend.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  credits.py  email_templates.py  errors.py  job_config.py  main.py  models.py  observability.py  pricing.py  redis_pool.py  storage_contract.py  templates.py
docs/: AUDITORIA-CLIPIA-2026-07-12.md  AUDITORIA-GOLIVE-2026-07-04.md  BACKLOG-AUDITORIA-2026-07-11.md  FABLE-ADVISOR-SYSTEM-PROMPT.md  FABLE-ELEVACAO-FULLSTACK.md  FABLE-FRONTEND-WORK.md  FABLE-MARKETING-PROXIMA-SESSAO.md  FABLE-MARKETING-VIDEO-PROMPT.md  FABLE-REVIEW-PROMPT.md  FRONTEND-ELEVACAO-REVISAO.md  GO-LIVE-CHECKLIST.md  GUIA-PAGAMENTO-PAINEIS.md  HANDOFF-GERACAO-2026-07-10.md  HANDOFF-biblioteca-drive.md  INSIGHTS-GPT56-2026-07-12.md  NEXT-SESSION-EDITOR-FIXES.md  NEXT-SESSION-EDITOR-V3-QA.md  NEXT-SESSION-EDITOR-V3.md  NEXT-SESSION-PHASE-B.md  NEXT-SESSION-PRODUCTION-V1.md  NEXT-SESSION-QA-EDITOR.md  NEXT-SESSION-QA-PRODUCTION.md  NEXT-SESSION-QA.md  PERF_NOTES_REMOTION.md  PLANO-ESCALA.md  PLANO-EXPANSAO.md  PROMPT-AUDITORIA-GPT56-2026-07-12.md  PROXIMA-SESSAO-UX-GERACAO.md  ROADMAP-QUALIDADE-VIDEO.md  ROADMAP.md  RUN-WINDOWS.md  SECURITY.md  SESSAO-biblioteca-drive.md  SESSION-COORD.md  SESSION-LOG-FRONTEND-REDESIGN.md  UX-AUDIT-EDITOR-2026-07-11.md  UX-AUDIT-F0.md  VERIFICACAO-UX-F5.md  brand-guidelines.md  briefing-biblioteca-drive-glm.md  (+1 more)
frontend/: .gitignore  DESIGN.md  next.config.ts  package-lock.json  package.json  playwright.config.mjs  tsconfig.json
marketing/: .gitignore
plans/: 001-modais-fisica-entrada-saida.md  002-toasts-entrada-saida-restack.md  003-playhead-transform-nao-layout.md  004-progress-bars-scalex.md  005-tokens-css-e-fim-do-transition-all.md  006-press-feedback-ctas.md  007-generateform-transicoes-de-estado.md  008-reduced-motion-gentil-e-status.md  009-delight-video-pronto-e-creditos.md  README.md
reference_voices/: README.md
(+580 files in other folders)
