[project]
name = "auto-shorts"
version = "0.1.0"
description = "Automated short video generator with AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "anthropic>=0.42.0",
    "TTS>=0.22.0",
    "faster-whisper>=1.1.0",
    "moviepy>=2.1.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "pydub>=0.25.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "mercadopago>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
