[project]
name = "auto-shorts"
version = "0.1.0"
description = "Automated short video generator with AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "anthropic>=0.42.0",
    "groq>=0.11.0",
    "openai>=1.54.0",
    "moviepy>=2.1.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "pydub>=0.25.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "mercadopago>=2.2.0",
    "stripe>=12.0.0",
    "slowapi>=0.1.9",
    "elevenlabs>=1.50.0",
    "edge-tts>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
    "aiosqlite>=0.22.0",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["alembic"]

[tool.pytest.ini_options]
testpaths = ["tests", "app/services"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
